# loop-orchestrator

./: AGENTS.md  CHANGELOG.md  Cargo.toml  Justfile  README.md  package-lock.json  package.json  ralph.roo.yml  ralph.yml
.github/workflows/: ci.yml
.ralph/specs/: workflow-builder-live-observation.spec.md  workflow-builder-ui-edit-controls.spec.md
crates/ralph-adapters/src/: auto_detect.rs  cli_backend.rs  cli_executor.rs  lib.rs  pty_executor.rs
crates/ralph-api/data/: rpc-v1-schema.json
crates/ralph-api/src/: collection_domain.rs  event_watcher.rs  lib.rs  (+3 more)
crates/ralph-e2e/: Cargo.toml
crates/ralph-e2e/features/hooks/: TRACEABILITY.md  error-dispositions.feature
crates/ralph-e2e/src/: executor.rs  hooks_bdd.rs  main.rs
crates/ralph-telegram/: Cargo.toml  README.md
docs/: index.md  installation.md
docs/06-analysis/: hooks-mutation-baseline-2026-03-01-survivors.txt  hooks-mutation-baseline-2026-03-01.md
docs/concepts/: backpressure.md
docs/examples/: pdd-design.md  spec-driven.md
docs/getting-started/: index.md  installation.md
docs/guide/: backends.md  cli-reference.md  configuration.md  roo-backend.md
docs/reference/: changelog.md  migration-v1.md
presets/: debug.yml
presets/minimal/: roo.yml
scripts/: hooks-mutation-gate.sh
specs/add-hooks-to-ralph-orchestrator-lifecycle/: CHANGELOG.md  design.md  plan.md  requirements.md  rough-idea.md  summary.md
specs/hat-imports/: design.md  requirements.md  rough-idea.md
specs/pi-agent-support/: rough-idea.md
tools/: evaluate-preset.sh  preset-test-tasks.yml  test-evaluate-preset.sh
(+76 files in other folders)
