[package]
name = "ralph-e2e"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "E2E test harness for Ralph Orchestrator - validates real backend behavior"
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[[bin]]
name = "ralph-e2e"
path = "src/main.rs"

[dependencies]
# CLI parsing
clap.workspace = true

# Async runtime
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true

# Time/date
chrono.workspace = true

# Terminal colors
colored.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# BDD framework + Gherkin parser
cucumber = "0.22.1"

# Regex for parsing
regex.workspace = true

# Async trait support
async-trait.workspace = true

# Ralph core for cassette replay
ralph-core = { path = "../ralph-core", features = ["recording"] }

[dev-dependencies]
tempfile.workspace = true
